--- a/views/header.ejs
+++ b/views/header.ejs
@@ -42,6 +42,11 @@
                             <span>Profile</span>
                         </div>
                     </a>
+                    <a href="/portfolio" class="menuLink">
+                        <div class="navItem" id="navProfile">
+                            <span>Report</span>
+                        </div>
+                    </a>
                     <a href="/account" class="menuLink">
                         <div class="navItem" id="navAccount">
                             <span>Account</span>
