profile editing in-place enabled

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,27 +3,40 @@
         <% include mastHead %>
         <div class="medBlank"></div>
         <div class="container flexV">
-            <div class="flexVL translucentBG inform" id="profile">
-                <div class="profileItem">Name: <%= data.firstName %> <%= data.lastName %></div>
-                <div class="profileItem">Birth year: <%= data.birthYear %></div>                
-                <div class="profileItem">Portfolio value: $<%= parseFloat(data.initInvest).toLocaleString() %></div>
-                <div class="profileItem">Retirement age goal: <%= data.retireAge %></div>
-                <div class="profileItem">Annual income: $<%= parseFloat(data.annualIncome).toLocaleString() %></div>
-                <div class="profileItem">Liquid net worth: $<%= parseFloat(data.netWorth).toLocaleString() %></div>
-                <div class="profileItem">Monthly expenses: $<%= parseFloat(data.monthlyExpenses).toLocaleString() %></div>
-                <div class="profileItem">Monthly savings: $<%= parseFloat(data.monthlySave).toLocaleString() %></div>
-                <div class="profileItem">Risk willingness (1-5): <%= data.riskWilling %></div>
+            <div class="flexVL translucentBG formContainer" id="profileEdit">
+                <label for="firstName" class="formLabel">First name:</label>
+                <input class="formInput" type="text" name="firstName" id="firstName" value="<%= data.firstName %>">
+                <label for="name" class="formLabel">Last name:</label>
+                <input class="formInput" type="text" name="lastName" id="lastName" value="<%= data.lastName %>">
+                <label for="birthYear" class="formLabel">Birth year:</label>
+                <input class="formInput" type="text" name="birthYear" id="birthYear" value="<%= data.birthYear %>">
+                <label for="initInvest" class="formLabel">Current portfolio value:</label>
+                <input class="formInput" type="text" name="initInvest" id="initInvest" value="$<%= parseFloat(data.initInvest).toLocaleString() %>">
+                <label for="retireAge" class="formLabel">Retirement age goal:</label>
+                <input class="formInput" type="text" name="retireAge" id="retireAge" value="<%= data.retireAge%>">
+                <label for="annualIncome" class="formLabel">Annual income:</label>
+                <input class="formInput" type="text" name="annualIncome" id="annualIncome" value="$<%= parseFloat(data.annualIncome).toLocaleString() %>">
+                <label for="netWorth" class="formLabel">Liquid net worth:</label>
+                <input class="formInput" type="text" name="netWorth" id="netWorth" value="$<%= parseFloat(data.netWorth).toLocaleString() %>">
+                <label for="monthlyExpenses" class="formLabel">Monthly expenses:</label>
+                <input class="formInput" type="text" name="monthlyExpenses" id="monthlyExpenses" value="$<%= parseFloat(data.monthlyExpenses).toLocaleString() %>">
+                <label for="monthlySave" class="formLabel">Monthly savings:</label>
+                <input class="formInput" type="text" name="monthlySave" id="monthlySave" value="$<%= parseFloat(data.monthlySave).toLocaleString() %>">
+                <label for="riskWilling" class="formLabel">Risk willingness (1-5):</label>
+                <input class="formInput"  type="text" name="riskWilling" id="riskWilling" value="<%= data.riskWilling %>">
                 <div class="smlBlank"></div>
-                <label for="editProfileButton" class="formLabel">Edit profile details:</label>
-                <a href="/profile/edit"><button class="buttons" id="editProfileButton">Edit</button></a>
+                <button class="buttons" id="saveProfileButton">Save</button>
+                <div class="medBlank">
+                    <div class="messages" id="updateMessage" style="display: none"></div>
+                </div>
             </div>
             <div class="inform translucentBG" id="portfolioBar">
-                <div class="chartContainer">
+                <div class="chartContainer" id="growthChartContainer">
                     <canvas class="chart" id="growthChart" width="300" height="200"></canvas>
                 </div>
             </div>
             <div class="inform translucentBG">
-                <div class="flexV" id="allocationChart"></div>
+                <div class="flexV" id="allocationChartContainer"></div>
             </div>
         </div>
         <div class="medBlank"></div>
@@ -32,5 +45,23 @@
     <script src="/javascripts/portfolioBar.js"></script>
     <script src="/javascripts/portfolioBuilder.js"></script>
     <script src="/javascripts/formulas.js"></script>
+    <script src="/javascripts/profileEdit.js"></script>
 
 <% include footer %>
+
+<!--
+<div class="flexVL translucentBG inform" id="profile">
+    <div class="profileItem">Name: <%= data.firstName %> <%= data.lastName %></div>
+    <div class="profileItem">Birth year: <%= data.birthYear %></div>                
+    <div class="profileItem">Portfolio value: $<%= parseFloat(data.initInvest).toLocaleString() %></div>
+    <div class="profileItem">Retirement age goal: <%= data.retireAge %></div>
+    <div class="profileItem">Annual income: $<%= parseFloat(data.annualIncome).toLocaleString() %></div>
+    <div class="profileItem">Liquid net worth: $<%= parseFloat(data.netWorth).toLocaleString() %></div>
+    <div class="profileItem">Monthly expenses: $<%= parseFloat(data.monthlyExpenses).toLocaleString() %></div>
+    <div class="profileItem">Monthly savings: $<%= parseFloat(data.monthlySave).toLocaleString() %></div>
+    <div class="profileItem">Risk willingness (1-5): <%= data.riskWilling %></div>
+    <div class="smlBlank"></div>
+    <label for="editProfileButton" class="formLabel">Edit profile details:</label>
+    <a href="/profile/edit"><button class="buttons" id="editProfileButton">Edit</button></a>
+</div>
+-->
