--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,22 +4,14 @@
         <div class="medBlank"></div>
         <div class="container flexV">
             <div class="flexVL translucentBG formContainer" id="profileEdit">
-                <label for="firstName" class="formLabel">First name:</label>
-                <input class="formInput" type="text" name="firstName" id="firstName" value="<%= data.firstName %>">
-                <label for="name" class="formLabel">Last name:</label>
-                <input class="formInput" type="text" name="lastName" id="lastName" value="<%= data.lastName %>">
-                <label for="birthYear" class="formLabel">Birth year:</label>
-                <input class="formInput" type="text" name="birthYear" id="birthYear" value="<%= data.birthYear %>">
+                <div class="headline">Your investment profile</div>
+                <div class="smlBlank"></div>
                 <label for="initInvest" class="formLabel">Current portfolio value:</label>
                 <input class="formInput" type="text" name="initInvest" id="initInvest" value="$<%= parseFloat(data.initInvest).toLocaleString() %>">
                 <label for="retireAge" class="formLabel">Retirement age goal:</label>
                 <input class="formInput" type="text" name="retireAge" id="retireAge" value="<%= data.retireAge%>">
-                <label for="annualIncome" class="formLabel">Annual income:</label>
-                <input class="formInput" type="text" name="annualIncome" id="annualIncome" value="$<%= parseFloat(data.annualIncome).toLocaleString() %>">
-                <label for="netWorth" class="formLabel">Liquid net worth:</label>
-                <input class="formInput" type="text" name="netWorth" id="netWorth" value="$<%= parseFloat(data.netWorth).toLocaleString() %>">
-                <label for="monthlyExpenses" class="formLabel">Monthly expenses:</label>
-                <input class="formInput" type="text" name="monthlyExpenses" id="monthlyExpenses" value="$<%= parseFloat(data.monthlyExpenses).toLocaleString() %>">
+                <label for="annualIncome" class="formLabel">Annual retirement income*:</label>
+                <input class="formInput" type="text" name="retireIncome" id="retireIncome" value="$<%= parseFloat(data.retireIncome).toLocaleString() %>">
                 <label for="monthlySave" class="formLabel">Monthly savings:</label>
                 <input class="formInput" type="text" name="monthlySave" id="monthlySave" value="$<%= parseFloat(data.monthlySave).toLocaleString() %>">
                 <label for="riskWilling" class="formLabel">Risk willingness (1-5):</label>
@@ -28,6 +20,12 @@
                 <button class="buttons" id="saveProfileButton">Save</button>
                 <div class="medBlank">
                     <div class="messages" id="updateMessage" style="display: none"></div>
+                </div>
+                <div class="sizeDown basic">
+                    * This amount is calculated from your current salary minus your annual savings and payroll taxes.
+                    It will be adjusted for inflation through retirement. 
+                    As you adjust it here, keep in mind that you will no longer need to "save" in retirement, and your expenses will 
+                    likely be lower overall.
                 </div>
             </div>
             <div class="inform translucentBG" id="portfolioBar">
